# TimerBot

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
include/core/: Application.hpp  Constants.hpp  NoRetryHttpClient.hpp
include/handlers/: EchoHandler.hpp  HandlerBase.hpp  KillHandler.hpp  StartHandler.hpp  TimeHandler.hpp
include/view/: BotUi.hpp
src/core/: Application.cpp
src/handlers/: EchoHandler.cpp  KillHandler.cpp  StartHandler.cpp  TimeHandler.cpp
src/view/: BotUi.cpp
